# ubturbo

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  README_EN.md  RELEASE-NOTES.md  build.sh  smap.spec  ubturbo.spec  update_src_openeuler.sh
plugins/ubdma/test/: CMakeLists.txt  main.cpp  run_dt.sh
plugins/ucache/src/: CMakeLists.txt  turbo_ucache_plugin.cpp
plugins/ucache/test/: CMakeLists.txt  run_dt.sh  ucache_main.cpp
src/: .clang--tidy  .clang-format  CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  turbo_conf.cpp  turbo_conf_manager.cpp  turbo_conf_manager.h  turbo_module_conf.cpp
src/drivers/: Makefile  access_acpi_helper.c  access_acpi_helper.h  access_acpi_mem.c  access_acpi_mem.h  access_ioctl.c  access_ioctl.h  access_iomem.c  access_iomem.h  access_mmu.c  access_mmu.h  access_pid.c  access_pid.h  access_tracking.c  access_tracking.h  access_tracking_wrapper.c  access_tracking_wrapper.h  accessed_bit.c  accessed_bit.h  bus.c  bus.h  check.h  core.c  drv_common.h  hist_ops.c  hist_ops.h  hist_tracking.c  hist_tracking.h  kvm_pgtable.c  memory_notifier.c  smap_hist_mid.c  tracking_ioctl.h  tracking_private.h  ub_hist.c  ub_hist.h  upa_smap.h
src/include/: turbo_common.h  turbo_error.h  turbo_main.h  turbo_module.h  turbo_module_conf.h  turbo_module_ipc.h  turbo_module_logger.h  turbo_module_plugin.h
src/ipc/client/: turbo_ipc_client.cpp  turbo_ipc_client_inner.cpp  turbo_ipc_client_inner.h
src/ipc/server/: CMakeLists.txt  turbo_ipc_handler.cpp  turbo_ipc_handler.h  turbo_ipc_server.cpp  turbo_ipc_server_inner.cpp  turbo_ipc_server_inner.h  turbo_module_ipc.cpp
src/log/: CMakeLists.txt  rack_logger.cpp  rack_logger_filesink.cpp  rack_logger_filesink.h  rack_logger_filter.cpp  rack_logger_filter.h  rack_logger_manager.cpp  rack_logger_manager.h  rack_logger_ringbuffer.cpp  rack_logger_ringbuffer.h  rack_logger_writer.h  turbo_module_logger.cpp
src/log/client/: ulog.cpp  ulog.h
src/log/include/: rack_common_def.h  rack_error.h
src/main/: CMakeLists.txt  turbo_main.cpp
src/plugin/: CMakeLists.txt  turbo_module_plugin.cpp  turbo_plugin_manager.cpp  turbo_plugin_manager.h
src/sdk/: turbo_rmrs_interface.cpp  turbo_rmrs_interface.h  turbo_ucache_interface.cpp  turbo_ucache_interface.h
src/sdk/include/: turbo_serialize.h
src/smap/: smap_handler_msg.cpp  smap_handler_msg.h  smap_interface.h
src/smap/client/: smap_client.cpp
src/smap/server/: CMakeLists.txt  turbo_module_smap.cpp  turbo_module_smap.h
src/tiering/: acpi_helper.c  acpi_mem.c  acpi_mem.h  basic.c  basic.h  coherence_maintain.c  coherence_maintain.h  common.h  dump_info.c  dump_info.h  ham_migration.c  ham_migration.h  ham_tasks_mgr.c  ham_tasks_mgr.h  iomem.c  iomem.h  ksm.h  mig_init.c  mig_init.h  migrate_back_debugfs.c  migrate_back_debugfs.h  migrate_task.c  migrate_task.h  numa.c  numa.h  pid_ioctl.h  rmap.c  rmap.h  smap_debugfs.h  smap_migrate_pages.c  smap_migrate_pages.h  smap_migrate_wrapper.c  smap_migrate_wrapper.h  smap_msg.h  tracking_manage.c  tracking_manage.h  work.c
src/tiering/depends/: hisi.symvers
src/ucache/: Makefile  core.c  ucache_migrate.c
src/user/: CMakeLists.txt  smap_env.h  smap_inner_interface.c  smap_inner_interface.h  smap_interface.c  smap_interface.h
src/user/advanced-strategy/: scene.c  scene.h  scene_info.h
src/user/manage/: access_ioctl.c  access_ioctl.h  device.c  device.h  manage.c  manage.h  numa_nodes.h  oom_migrate.c  smap_config.c  smap_config.h  smap_ioctl.h  thread.c  virt.c  virt.h
src/user/strategy/: grouped_strategy.c  grouped_strategy.h  migration.c  period_config.c  period_config.h  separate_strategy.c  separate_strategy.h  strategy.c  strategy.h
src/user/user_log/: CMakeLists.txt  smap_log_core.c  smap_log_core.h
src/utils/: CMakeLists.txt  turbo_file_util.cpp  turbo_file_util.h  turbo_type.h
test/: CMakeLists.txt  run_dt.sh  run_dt_fast.sh  run_ut.sh  skip_files  tmp
test/depends/fs/: file_table.c  ioctl.c  libfs.c  namei.c  read_write.c  seq_file.c
test/depends/kernel/: kthread.c  param.c  resource.c  umh.c  user_namespace.c  workqueue.c
test/depends/kvm/: stub.c
test/depends/lib/: find_bit.c  idr.c  iomap.c  mmap_lock.c  sort.c  string.c
test/depends/mm/: err.c  folio-compat.c  memory.c  migrate.c  page_alloc.c  pgtable-generic.c  stub.c  vmalloc.c  vmstat.c
test/drivers/: stub_core.c  stub_core.h  test_access_acpi_mem.cpp  test_access_ioctl.cpp  test_access_iomem.cpp  test_access_mmu.cpp  test_access_pid.cpp  test_access_tracking.cpp  test_access_tracking_wrapper.cpp  test_accessed_bit.cpp  test_bus.cpp  test_core.cpp  test_hist_ops.cpp  test_hist_tracking.cpp  test_kvm_pgtable.cpp  test_memory_notifier.cpp  test_ub_hist.cpp
test/testcase/config/: test_turbo_conf.cpp  test_turbo_conf_manager.cpp  test_turbo_module_conf.cpp
test/testcase/ipc/: test_ipc_client.cpp  test_turbo_ipc_handler.cpp  test_turbo_module_ipc.cpp
test/testcase/log/: test_rack_logger.cpp  test_rack_logger.h  test_rack_logger_filesink.cpp  test_rack_logger_filesink.h  test_rack_logger_filter.cpp  test_rack_logger_filter.h  test_rack_logger_manager.cpp  test_rack_logger_manager.h  test_rack_logger_ringbuffer.cpp  test_rack_logger_ringbuffer.h  test_turbo_module_logger.cpp  test_turbo_module_logger.h
test/testcase/plugin/: test_turbo_module_plugin.cpp  test_turbo_plugin_manager.cpp
test/tiering/: stub_ham_migration.c  stub_kernel_critical_err.c  stub_rmap.c  test_acpi_helper.cpp  test_acpi_mem.cpp  test_basic.cpp  test_case_dump_info.cpp  test_case_iomem.cpp  test_coherence_maintain.cpp  test_ham_migration.cpp  test_ham_tasks_mgr.cpp  test_iomem.cpp  test_mig_init.cpp  test_migrate_back_debugfs.cpp  test_migrate_task.cpp  test_migrate_wrapper.cpp  test_numa.cpp  test_pid_ioctl.cpp  test_smap_debugfs.cpp  test_smap_migrate_pages.cpp  test_smap_migrate_wrapper.cpp  test_tracking_manage.cpp  test_work.cpp
test/ucache/: linux_mock.h  ucache_migrate_test.cpp
test/user/: InnerInterfaceTest.cpp  InterfaceTest.cpp  SmapLogCoreTest.cpp
(+849 files in other folders)
